main/manifests/uuid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uuid-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uuid
  template:
    metadata:
      labels:
        app: uuid
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: main-claim
      containers:
        - name: uuid-writer
          image: ananaa/uuid-writer:110
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /app/files
        - name: uuid-reader
          image: ananaa/uuid-reader:111
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /app/files
