main/manifests/uuid-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uuid-svc
spec:
  type: NodePort
  selector:
    app: uuid
  ports:
    - protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 4000 # This is the target port
